springcloud/busybox.yml
apiVersion: v1
kind: Pod
metadata:
  name: busybox
  namespace: spring-cloud
  labels:
    app: busybox
spec:
  containers:
  - name: busybox
    image: busybox:1.28.4
    command:
      - sleep
      - "3600"
    imagePullPolicy: IfNotPresent
  restartPolicy: Always
