springcloud/school.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: school-deployment
  namespace: spring-cloud
  labels:
    app: school
spec:
  replicas: 1
  selector:
    matchLabels:
      app: school
  template:
    metadata:
      labels:
        app: school
    spec:
      containers:
      - name: school
        image: datacenter-school:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8084
