springcloud/student.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: student-deployment
  namespace: spring-cloud
  labels:
    app: student
spec:
  replicas: 1
  selector:
    matchLabels:
      app: student
  template:
    metadata:
      labels:
        app: student
    spec:
      containers:
      - name: student
        image: localhost:32000/datacenter-student:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8083
