springcloud/teacher.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: teacher-deployment
  namespace: spring-cloud
  labels:
    app: teacher
spec:
  replicas: 1
  selector:
    matchLabels:
      app: teacher
  template:
    metadata:
      labels:
        app: teacher
    spec:
      containers:
      - name: teacher
        image: localhost:32000/datacenter-teacher:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8082
