springcloud/eureka.yml
apiVersion: v1
kind: Service
metadata:
  name: eureka
  namespace: spring-cloud
spec:
  ports:
    - name: eureka
      protocol: TCP
      port: 8761
      targetPort: 8761
      nodePort: 30761
  selector:
    app: eureka
  type: NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eureka-deployment
  namespace: spring-cloud
  labels:
    app: eureka
spec:
  replicas: 1
  selector:
    matchLabels:
      app: eureka
  template:
    metadata:
      labels:
        app: eureka
    spec:
      containers:
      - name: eureka
        image: datacenter-eureka:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8761
